--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
 numpy===1.18.1
 aiohttp===3.6.2
+aiofiles===0.4.0
 uvicorn===0.11.2
 starlette===0.13.1
 python-multipart===0.0.5
+opencv-python===4.2.0.32
+keras===2.3.1
+tensorflow===2.1.0
