Add unit testing, fix linting & updated dependencies

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -92,7 +92,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
+            "karmaConfig": "src/karma.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
