--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,22 @@
 # 1 - Define base image
-FROM python:3.6
+FROM ubuntu:18.04
+
+ENV DEBIAN_FRONTEND noninteractive
 
 # 2 - Run apt update
 RUN apt-get update
+RUN apt-get -y upgrade
 
 # 3 - Install some needed packages
-RUN apt-get install -y python3-dev gcc
+RUN apt-get install -y python3.6 python3-pip gcc wget python-opencv
 
 # 4 - Copy the requirements.txt to Docker container
 COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 
-# 5 - Install some needed packages for the project
-RUN pip install -r requirements.txt
+# 5 - Install tensorflow (no AVX - CPU)
+COPY tensorflow-1.14.1-cp36-cp36m-linux_x86_64.whl tensorflow-1.14.1-cp36-cp36m-linux_x86_64.whl
+RUN pip3 install tensorflow-1.14.1-cp36-cp36m-linux_x86_64.whl
 
 # 6 - Expose port 443 to bind to later on
 EXPOSE 443
