--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ starlette===0.13.2
 python-multipart===0.0.5
 opencv-python===4.2.0.32
 keras===2.3.1
+parameterized==0.7.1
+pytest==5.4.1
+pytest-cov==2.8.1
