Updated project to use new registry

--- a/azure/backend-cd.yml
+++ b/azure/backend-cd.yml
@@ -9,8 +9,8 @@ pool:
 steps:
 - task: Docker@2
   inputs:
-    containerRegistry: 'DockerHub'
-    repository: 'joachimveulemans/license-plate-reader'
+    containerRegistry: 'DockerHubJoachim'
+    repository: 'license-plate-reader'
     command: 'buildAndPush'
     Dockerfile: 'backend/Dockerfile'
     buildContext: 'backend'
