--- a/azure/backend-ci.yml
+++ b/azure/backend-ci.yml
@@ -31,8 +31,8 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'DockerHub'
-    repository: 'joachimveulemans/license-plate-reader'
+    containerRegistry: 'DockerHubJoachim'
+    repository: 'license-plate-reader'
     command: 'build'
     Dockerfile: 'backend/Dockerfile'
     buildContext: 'backend'
