--- a/azure/frontend-ci.yml
+++ b/azure/frontend-ci.yml
@@ -44,8 +44,8 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'DockerHub'
-    repository: 'joachimveulemans/license-plate-reader'
+    containerRegistry: 'DockerHubJoachim'
+    repository: 'license-plate-reader'
     command: 'build'
     Dockerfile: 'frontend/Dockerfile'
     buildContext: 'frontend'
